--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,43 +1,12 @@
-Pipeline{
-agent any
+pipeline {
+    agent any
 
-stages{
-
-stage("Hello"){
-steps{
-echo "Hello World"
-}
-}
-
-stage("Build"){
-steps{
-echo "Build"
-}
+    stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
+            }
+        }
+    }
 }
 
-stage("Deploy"){
-steps{
-echo "Deploy"
-}
-}
-
-
-stage("Test"){
-steps{
-echo "Test"
-}
-}
-
-
-stage("Release"){
-steps{
-echo "Release"
-}
-}
-
-}
-
-
-
-
-}
