--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,6 +7,17 @@ pipeline {
                 echo 'Hello World'
             }
         }
+        
+        stage('deploy') {
+            steps {
+                echo 'Deploy'
+            }
+        }
+
+        
+        
+        
+        
     }
 }
 
